--- a/index.html
+++ b/index.html
@@ -1,1 +1,38 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="icon" href="https://pbs.twimg.com/profile_images/514213621526573057/_tK14_yT_normal.png">
+  <title>
+    ONYX industries
+  </title>
+  <link rel="stylesheet" type="text/css" href="interface.css" />
+</head>
+<body>
+  <p>
+    <div class="logo.div">ONYX industries</div>
+  </p>
+  <p>
+    <div class="descriptionDiv">
+      <p>
+        Welcome to ONYX industries, the home of a mediocre coder, aged 14 who knows omly three languages, but still, pretty cool, huh? 
+      </p>
+      <p>
+        Here you will find all of our "exceptional"products, including incremental games, Biology revision resources and other works in progress. But be not afraid, there will be future additions, including  things beyond human comprehension (I haven't thought of anything yet)
+      </p>
+    </div>
+  </p>
+  <p>
+    <div class="productDiv">
+      <p>
+        <h2>
+          Our products:
+        </h2>
+      </p>
+      <p>
+        <div class="linkDiv">
+          <a href="http://onyxindustries.github.io/Biology-revision/"
+        </div>
+      </p>
+    </div>
+  </p>
+  
