--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </title>
   <link rel="stylesheet" type="text/css" href="interface.css" />
 </head>
-<body>
+<body background="http://www.animateit.net/data/media/june2010/animated_60.gif">
   <p>
     <div class="logo.div">ONYX industries</div>
   </p>
