--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body background="http://www.animateit.net/data/media/june2010/animated_60.gif">
   <p>
-    <div class="logo.div">ONYX industries</div>
+    <div class="logoDiv">ONYX industries</div>
   </p>
   <p>
     <div class="descriptionDiv">
