--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <p>
     <div class="descriptionDiv">
       <p>
-        Welcome to ONYX industries, the home of a mediocre coder, aged 14 who knows omly three languages, but still, pretty cool, huh? 
+        Welcome to ONYX industries, the home of a mediocre coder, aged 14 who knows only three languages, but still, pretty cool, huh? 
       </p>
       <p>
-        Here you will find all of our "exceptional"products, including incremental games, Biology revision resources and other works in progress. But be not afraid, there will be future additions, including  things beyond human comprehension (I haven't thought of anything yet)
+        Here you will find all of our "exceptional"products, including incremental games, Biology revision resources and other works in progress. But be not afraid, there will be future additions, including  things beyond human comprehension! (ie: I haven't thought of anything yet)
       </p>
     </div>
   </p>
