--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body background="http://www.animateit.net/data/media/june2010/animated_60.gif">
   <p>
-    <div class="logoDiv">ONYX industries</div>
+    <div class="logoDiv">C-H industries</div>
   </p>
   </br>
   </br>
@@ -32,7 +32,7 @@
       </p>
       <p>
         <div class="linkDiv">
-          <a href="http://onyxindustries.github.io/Biology-revision/"
+          <a href="http://chindustries.github.io/Biology-revision/">Biology revision resources</a>
         </div>
       </p>
     </div>
